# email-triage-openenv

./: .gitignore  Dockerfile  README.md  baseline.py  check_actions.py  checklist_audit.py  inference.py  live_test.py  openenv.yaml  pyproject.toml  requirements.txt  test_hf_grader.py  test_hf_space.py  test_reset.py  validate.py
.github/workflows/: sync_to_hf.yml
env/: __init__.py  data_gen.py  email_env.py  models.py  reward.py  tasks.py
frontend/: index.html
server/: app.py
