[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world OpenEnv environment for AI agent email triage training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "rouge-score>=0.1.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"
inference = "inference:main"
